crates/rome_js_formatter/tests/specs/prettier/js/decorator-auto-accessors/static-computed.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
---

# Input

```js
class Foo {
  static accessor ["bar"];
}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,3 +1,4 @@
 class Foo {
-  static accessor ["bar"];
+  static accessor;
+  ["bar"];
 }
```

# Output

```js
class Foo {
  static accessor;
  ["bar"];
}
```


# Errors
```
error[SyntaxError]: expected a semicolon to end the class property, but found none
  ┌─ static-computed.js:2:3
  │
2 │   static accessor ["bar"];
  │   ^^^^^^^^^^^^^^^


```


